--- a/src/css/simplicio-tools.css
+++ b/src/css/simplicio-tools.css
@@ -1,15 +1,18 @@
+/* line 1, ../sass/_simplicio-tools-utils.scss */
 .simplicioVerticalAlignFrame {
   display: table;
   width: 100%;
   min-height: 100%;
 }
 
+/* line 5, ../sass/_simplicio-tools-utils.scss */
 .simplicioVerticalAlignContent {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
 }
 
+/* line 9, ../sass/_simplicio-tools-utils.scss */
 span.simplicioLetter {
   font-size: 3.3333em;
   -moz-border-radius: 20px 20px 20px 20px;
@@ -28,35 +31,43 @@ span.simplicioLetter {
   text-align: center;
 }
 
+/* line 1, ../sass/_simplicio-navbar.scss */
 .simplicioNavigation {
   margin-bottom: 0px;
   border: 0px none;
 }
+/* line 5, ../sass/_simplicio-navbar.scss */
 .simplicioNavigation a {
   cursor: pointer;
 }
+/* line 8, ../sass/_simplicio-navbar.scss */
 .simplicioNavigation a#logo {
   padding: 0px;
   height: 60px;
 }
+/* line 12, ../sass/_simplicio-navbar.scss */
 .simplicioNavigation a#logo img {
   height: 100%;
 }
 
+/* line 19, ../sass/_simplicio-navbar.scss */
 #admin-menu {
   z-index: 9999;
 }
 
+/* line 23, ../sass/_simplicio-navbar.scss */
 body.admin-menu .simplicioNavigation.navbar-fixed-top {
   margin-top: 29px !important;
 }
 
+/* line 3, ../sass/_simplicio-accordion.scss */
 .simplicio-horizontal-accordion {
   display: block;
   position: relative;
   width: 100%;
   overflow: hidden;
 }
+/* line 9, ../sass/_simplicio-accordion.scss */
 .simplicio-horizontal-accordion .simplicio-accordion-elem {
   display: block;
   position: absolute;
@@ -67,12 +78,14 @@ body.admin-menu .simplicioNavigation.navbar-fixed-top {
   cursor: pointer;
   background-color: black;
 }
+/* line 19, ../sass/_simplicio-accordion.scss */
 .simplicio-horizontal-accordion .simplicio-accordion-elem img {
   display: block;
   position: relative;
   left: 0px;
   width: 100%;
 }
+/* line 26, ../sass/_simplicio-accordion.scss */
 .simplicio-horizontal-accordion .simplicio-accordion-elem .simplicio-accordion-caption {
   display: block;
   position: absolute;
@@ -82,9 +95,11 @@ body.admin-menu .simplicioNavigation.navbar-fixed-top {
   padding: 10px;
   opacity: 0;
 }
+/* line 35, ../sass/_simplicio-accordion.scss */
 .simplicio-horizontal-accordion .simplicio-accordion-elem .simplicio-accordion-caption h1, .simplicio-horizontal-accordion .simplicio-accordion-elem .simplicio-accordion-caption h2, .simplicio-horizontal-accordion .simplicio-accordion-elem .simplicio-accordion-caption h3, .simplicio-horizontal-accordion .simplicio-accordion-elem .simplicio-accordion-caption h4, .simplicio-horizontal-accordion .simplicio-accordion-elem .simplicio-accordion-caption h5, .simplicio-horizontal-accordion .simplicio-accordion-elem .simplicio-accordion-caption p {
   color: white;
 }
+/* line 40, ../sass/_simplicio-accordion.scss */
 .simplicio-horizontal-accordion .simplicio-accordion-elem .simplicio-accordion-header {
   display: block;
   position: absolute;
@@ -103,11 +118,11 @@ body.admin-menu .simplicioNavigation.navbar-fixed-top {
   transform: rotate(90deg);
 }
 
+/* line 60, ../sass/_simplicio-accordion.scss */
 .simplicio-vertical-accordion .simplicio-accordion-elem .simplicio-accordion-header {
   cursor: pointer;
 }
+/* line 64, ../sass/_simplicio-accordion.scss */
 .simplicio-vertical-accordion .simplicio-accordion-elem .simplicio-accordion-content {
   height: 0px;
 }
-
-/*# sourceMappingURL=simplicio-tools.css.map */
